examples/test/testpolicy8757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8757
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key24: value26
      key3: value33
      key17: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value17
          key30: value31
      podSelector:
        matchLabels:
          key1: value12
